# similarity_search

./: README.md  pyproject.toml
data/: similarity_search.csv
src/: faiss.ipynb
